--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,9 @@ footer .credit a {
 
 .products .product-image img {
   height: 20rem;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .products .product-content h3 {
